feat!: Send answer as a JSON string in body for POST /answer
BREAKING: POST /answer enpoint data changed
